--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
     database-platform: org.hibernate.dialect.MariaDBDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
